<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/editor_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/device_info_textView"
            android:layout_width="@dimen/device_info_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/device_info_marginTop"
            android:layout_weight="2"
            android:text="@string/informaation"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_Size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="@dimen/device_info_width"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <EditText
                android:id="@+id/device_name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/device_name"
                android:textAppearance="?android:textAppearanceMedium" />

            <EditText
                android:id="@+id/device_cost_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pricing"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/device_quantity_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                android:inputType="numberSigned" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/supplier_marginTop"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/supplier_info_textView"
            android:layout_width="@dimen/device_info_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/device_info_marginTop"
            android:layout_weight="2"
            android:text="@string/supplier__info"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_Size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="@dimen/device_info_width"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <EditText
                android:id="@+id/supplier_name__editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_Name" />

            <EditText
                android:id="@+id/supplier_phone_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact"
                android:inputType="phone" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>